Fix for the bug #1333: COMPRESS(NULL) segfaults.

mysql-test/r/func_compress.result:
  Test for the bug #1333: COMPRESS(NULL) segfaults.
mysql-test/t/func_compress.test:
  Test for the bug #1333: COMPRESS(NULL) segfaults.
BitKeeper/etc/logging_ok:
  Logging to logging@openlogging.org accepted